--- a/Verkefni-5/styles.css
+++ b/Verkefni-5/styles.css
@@ -20,18 +20,6 @@ main {
   padding: 20px;
 }
 
-h2 {
-  font-size: 22px;
-  line-height: 22px;
-}
-
-p {
-  font-size: 16px;
-  line-height: 22px;
-}
-h2 + div {
-  display: flex;
-}
 .cards {
   display: flex;
   flex-wrap: wrap;
@@ -42,6 +30,9 @@ h2 + div {
 
 .card {
   display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  overflow-wrap: break-word;
 
   background: #fff;
   border: 2px solid #aaa;
@@ -51,8 +42,41 @@ h2 + div {
   max-height: 300px;
   width: 100%;
   margin-bottom: 10px;
+  padding: 10px;
 }
 
-ul{
+.card__title {
+  font-size: 22px;
+  line-height: 22px;
+  word-wrap: break-word;
+}
+
+.card__content {
   display: flex;
+  flex-direction: row;
+}
+
+.card__text {
+  font-size: 16px;
+  line-height: 22px;
+  overflow: auto;
+  word-wrap: break-word;
+}
+
+.card__img {
+  width: 150px;
+  height: auto;
+}
+
+.card__list {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style: none;
+  font-weight: bold;
+  flex: 1 0 auto;
+}
+
+.card__list li {
+  margin: 0 8px 0 0;
 }
