--- a/Verkefni-5/styles.css
+++ b/Verkefni-5/styles.css
@@ -19,20 +19,22 @@ main {
   max-width: 1500px;
   padding: 20px;
 }
-
+/* Öll kort */
 .cards {
   display: flex;
   flex-wrap: wrap;
-
-  background-color: #eee;
   justify-content: space-around;
-}
 
+  background: #eee;
+}
+/* Hvert kort */
 .card {
   display: flex;
   flex-direction: column;
   justify-content: baseline;
   overflow-wrap: break-word;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   background: #fff;
   border: 2px solid #aaa;
@@ -40,43 +42,46 @@ main {
 
   max-width: 470px;
   max-height: 300px;
-  width: 100%;
+
   margin-bottom: 10px;
   padding: 10px;
 }
-
+/* Fyrirsagnir */
 .card__title {
   font-size: 22px;
   line-height: 22px;
-  word-wrap: break-word;
-}
+  margin-bottom: 20px;
 
+}
+/* Ílát fyrir texta og mynd */
 .card__content {
   display: flex;
   flex-direction: row;
+  flex: 1;
 }
-
+/* Textinn */
 .card__text {
   font-size: 16px;
   line-height: 22px;
   overflow: auto;
-  word-wrap: break-word;
 }
-
+/* Myndir */
 .card__img {
-  width: 150px;
-  height: auto;
+  max-width: 150px;
+  flex: 0 0 150px;
+  padding-left: 20px;
 }
-
+/* Fótur í kortum */
 .card__list {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
+  flex-direction: row;
+
   list-style: none;
   font-weight: bold;
-  flex: 1 0 auto;
+  
+  padding-top: 10px;
 }
-
 .card__list li {
-  margin: 0 8px 0 0;
+  margin: 0 10px 0 0;
 }
